@@ -1,3 +1,10 @@
+2002-08-16  Derek Price  <derek@ximbiot.com>
+
+	* configure.in: Make CVS_BADROOT a configure option.
+
+	* configure: Regenerated.
+	* config.h.in: Ditto.
+
 2002-08-12  Derek Price  <oberon@umich.edu>
 
 	* configure.in: Move ftruncate from AC_CHECK_FUNC to AC_REPLACE_FUNC.
